@@ -94,6 +94,7 @@ main(int argc, char* argv[])
 	}
 	if (fread(&h, sizeof (h), 1, in) != 1) {
 		fprintf(stderr, "%s: Can not read header.\n", argv[optind]);
+		fclose(in);
 		return (-2);
 	}
 	if (strcmp(h.ras_magic, RAS_MAGIC) == 0) {
@@ -118,11 +119,15 @@ main(int argc, char* argv[])
 #endif
 	} else {
 		fprintf(stderr, "%s: Not a rasterfile.\n", argv[optind]);
+		fclose(in);
 		return (-3);
 	}
 	out = TIFFOpen(argv[optind+1], "w");
 	if (out == NULL)
+	{
+		fclose(in);
 		return (-4);
+	}
 	TIFFSetField(out, TIFFTAG_IMAGEWIDTH, (uint32) h.ras_width);
 	TIFFSetField(out, TIFFTAG_IMAGELENGTH, (uint32) h.ras_height);
 	TIFFSetField(out, TIFFTAG_ORIENTATION, ORIENTATION_TOPLEFT);
@@ -224,6 +229,7 @@ main(int argc, char* argv[])
 			break;
 	}
 	(void) TIFFClose(out);
+	fclose(in);
 	return (0);
 }
 
