@@ -1,5 +1,9 @@
 2009-11-30  Frank Warmerdam  <warmerdam@pobox.com>
 
+	* contrib/dbs/tiff-grayscale.c, contrib/tif-palette.c, 
+	tools/ras2tiff.c: Fix resource leaks on error.
+	http://bugzilla.maptools.org/show_bug.cgi?id=2121
+
 	* libtiff/tif_{aux.c,dir.c,dir.h,dirinfo.c}: Return to handling 
 	TIFFTAG_REFERENCEBLACKWHITE as a field in the TIFF directory instead
 	of as a custom(generic) field to avoid a potential reentrancy problem.
